# Spacescape

./: .gitignore  CMakeLists.txt
Spacescape/: CMakeLists.txt
Spacescape/scripts/: Makefile
Spacescape/src/: QtOgreWidget.cpp  QtSpacescapeMainWindow.cpp
SpacescapePlugin/: CMakeLists.txt
SpacescapePlugin/src/: SpacescapeLayerBillboards.cpp  SpacescapeLayerNoise.cpp
