CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)

PROJECT(Spacescape)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake-extras/")
FIND_PACKAGE(OGRE REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(Qt4 REQUIRED)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Spacescape/app/linux/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Spacescape/app/linux/bin)

ADD_DEFINITIONS(-DTIXML_USE_TICPP)
INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIRS})
ADD_SUBDIRECTORY(Spacescape)
ADD_SUBDIRECTORY(SpacescapePlugin)
